--- a/package.json
+++ b/package.json
@@ -14,9 +14,15 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.17.5",
+    "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
+    "@babel/runtime": "^7.17.2",
     "@pmmmwh/react-refresh-webpack-plugin": "github:pmmmwh/react-refresh-webpack-plugin",
+    "@tsconfig/create-react-app": "^1.0.2",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
     "babel-loader": "^8.2.3",
     "cross-env": "^7.0.3",
     "css-loader": "^6.6.0",
@@ -29,6 +35,8 @@
     "react-refresh": "^0.11.0",
     "sass": "^1.49.8",
     "sass-loader": "^12.6.0",
+    "ts-node": "^10.5.0",
+    "typescript": "^4.5.5",
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
