--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "postcss-preset-env": "^7.4.1",
         "prettier": "2.5.1",
         "react-refresh": "^0.11.0",
+        "resolve-url-loader": "^5.0.0",
         "sass": "^1.49.8",
         "sass-loader": "^12.6.0",
         "stylelint-config-prettier-scss": "^0.0.1",
