--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "license": "ISC",
     "devDependencies": {
         "@babel/core": "^7.17.5",
+        "@babel/plugin-transform-runtime": "^7.17.0",
         "@babel/preset-env": "^7.16.11",
         "@babel/preset-react": "^7.16.7",
         "@babel/preset-typescript": "^7.16.7",
-        "@babel/runtime": "^7.17.2",
         "@pmmmwh/react-refresh-webpack-plugin": "github:pmmmwh/react-refresh-webpack-plugin",
         "@testing-library/react": "^12.1.3",
         "@tsconfig/create-react-app": "^1.0.2",
@@ -59,7 +59,9 @@
         "webpack-dev-server": "^4.7.4"
     },
     "dependencies": {
+        "@babel/runtime": "^7.17.2",
         "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "react-dom": "^17.0.2",
+        "react-router-dom": "^6.2.2"
     }
 }
