--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "index.js",
     "scripts": {
         "start": "cross-env SERVE=true webpack serve",
+        "lint": "npx eslint . --fix",
         "test": "jest",
         "build": "webpack",
         "build-prod": "webpack --mode=production",
@@ -33,11 +34,13 @@
         "eslint": "^8.10.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-prettier": "^8.5.0",
+        "eslint-import-resolver-typescript": "^2.5.0",
         "eslint-plugin-import": "^2.25.4",
         "eslint-plugin-jsx-a11y": "^6.5.1",
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react": "^7.29.3",
         "eslint-plugin-react-hooks": "^4.3.0",
+        "eslint-plugin-simple-import-sort": "^7.0.0",
         "html-loader": "^3.1.0",
         "html-webpack-plugin": "^5.5.0",
         "jest": "^27.5.1",
