--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "eslint-plugin-react": "^7.29.3",
         "eslint-plugin-react-hooks": "^4.3.0",
         "eslint-plugin-simple-import-sort": "^7.0.0",
+        "eslint-plugin-sonarjs": "^0.12.0",
         "html-loader": "^3.1.0",
         "html-webpack-plugin": "^5.5.0",
         "jest": "^27.5.1",
@@ -64,6 +65,7 @@
         "@babel/runtime": "^7.17.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "react-router-dom": "^6.2.2"
+        "react-router-dom": "^6.2.2",
+        "recoil": "^0.6.1"
     }
 }
