--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
         "paths": {
             "@components/*": ["src/components/*"],
             "@utils/*": ["src/utils/*"],
-            "@assets/*": ["src/assets/*"]
+            "@assets/*": ["src/assets/*"],
+            "@store/*": ["src/store/*"]
         },
         "outDir": "./dist",
         "noImplicitAny": true,
