--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@babel/preset-typescript": "^7.16.7",
         "@pmmmwh/react-refresh-webpack-plugin": "github:pmmmwh/react-refresh-webpack-plugin",
         "@testing-library/react": "^12.1.3",
+        "@testing-library/react-hooks": "^7.0.2",
         "@tsconfig/create-react-app": "^1.0.2",
         "@types/jest": "^27.4.1",
         "@types/react": "^17.0.39",
@@ -53,6 +54,7 @@
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.49.8",
         "sass-loader": "^12.6.0",
+        "stylelint-config-prettier": "^9.0.3",
         "stylelint-config-prettier-scss": "^0.0.1",
         "stylelint-config-standard-scss": "^3.0.0",
         "ts-node": "^10.5.0",
