--- a/package.json
+++ b/package.json
@@ -65,6 +65,11 @@
     },
     "dependencies": {
         "@babel/runtime": "^7.17.2",
+        "@emotion/react": "^11.8.2",
+        "@emotion/styled": "^11.8.1",
+        "@fontsource/roboto": "^4.5.3",
+        "@mui/icons-material": "^5.5.1",
+        "@mui/material": "^5.5.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.2.2",
