--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@types/jest": "^27.4.1",
         "@types/react": "^17.0.39",
         "@types/react-dom": "^17.0.11",
+        "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^5.13.0",
         "@typescript-eslint/parser": "^5.13.0",
         "babel-loader": "^8.2.3",
@@ -73,6 +74,7 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.2.2",
-        "recoil": "^0.6.1"
+        "recoil": "^0.6.1",
+        "uuid": "^8.3.2"
     }
 }
