--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
             "@components/*": ["src/components/*"],
             "@utils/*": ["src/utils/*"],
             "@assets/*": ["src/assets/*"],
-            "@store/*": ["src/store/*"]
+            "@store/*": ["src/store/*"],
+            "@hooks/*": ["src/hooks/*"]
         },
         "outDir": "./dist",
         "noImplicitAny": true,
