--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
         "start": "cross-env SERVE=true webpack serve",
         "lint": "npx eslint . --fix",
         "test": "jest",
+        "cypress": "cypress open",
+        "cypress:headless": "cypress run --browser chrome --headless",
+        "test:e2e": "start-server-and-test start 3000 cypress",
+        "test:e2e:ci": "start-server-and-test start 3000 cypress:headless",
         "build": "webpack",
         "build-prod": "webpack --mode=production",
         "clean": "rd /s /q dist"
@@ -21,6 +25,7 @@
         "@babel/preset-react": "^7.16.7",
         "@babel/preset-typescript": "^7.16.7",
         "@pmmmwh/react-refresh-webpack-plugin": "github:pmmmwh/react-refresh-webpack-plugin",
+        "@testing-library/cypress": "^8.0.2",
         "@testing-library/react": "^12.1.3",
         "@testing-library/react-hooks": "^7.0.2",
         "@tsconfig/create-react-app": "^1.0.2",
@@ -33,6 +38,7 @@
         "babel-loader": "^8.2.3",
         "cross-env": "^7.0.3",
         "css-loader": "^6.6.0",
+        "cypress": "^9.5.4",
         "eslint": "^8.10.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-import-resolver-typescript": "^2.5.0",
@@ -55,6 +61,7 @@
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.49.8",
         "sass-loader": "^12.6.0",
+        "start-server-and-test": "^1.14.0",
         "stylelint-config-prettier": "^9.0.3",
         "stylelint-config-prettier-scss": "^0.0.1",
         "stylelint-config-standard-scss": "^3.0.0",
